# nelder_mead

./: .clang-format  CMakeLists.txt  README.md  main.cpp  nelder_mead.cpp  nelder_mead.h  vector.hpp
examples/: 2d.cpp
include/nelder_mead/: impl.h  nelder_mead.h  vector.hpp
src/: impl.cpp  main.cpp  nelder_mead.cpp  vector.hpp
